# desperado

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  agents.md  dist-workspace.toml  readme.md
.github/: dependabot.yml
.github/workflows/: aur.yml  release.yml  rust.yml
crates/dabradio/: Cargo.toml  readme.md
crates/dabradio/src/: charsets.rs  constants.rs  dab_resampler.rs  main.rs
crates/dabradio/src/audio/: mod.rs
crates/dabradio/src/fec/: eep.rs  energy_dispersal.rs  mod.rs  viterbi.rs
crates/dabradio/src/fic/: fib.rs  handler.rs  mod.rs
crates/dabradio/src/msc/: mod.rs
crates/dabradio/src/ofdm/: decoder.rs  mod.rs  processor.rs
crates/dabradio/src/pad/: mod.rs  mot.rs
crates/desperado/: Cargo.toml  readme.md
crates/desperado/examples/: airspy_raw_bytes.rs  airspy_test.rs  file_iter.rs  file_stream.rs  rtl_sdr.rs  rtlsdr_fm.rs  waterfall.rs
crates/desperado/src/: airspy.rs  error.rs  hackrf.rs  lib.rs  metrics.rs  rtlsdr.rs  sdr.rs
crates/desperado/src/dsp/: afc.rs  agc.rs  buffer.rs  channelizer.rs  chebyshev.rs  dab_resampler.rs  decimator.rs  downsample.rs  filters.rs  fm.rs  iir.rs  mod.rs  nco.rs  pll_filter.rs  rds_tests.rs  resampler.rs  symsync.rs  voracious.rs  window.rs
crates/desperado/tests/: helpers.rs  iq_conversion_test.rs  iqread_test.rs
crates/fmradio/: Cargo.toml  readme.md
crates/fmradio/examples/: fm_scan.rs
crates/fmradio/src/: fm.rs  lib.rs  main.rs  rds.rs  rds_tests.rs  resampler.rs
crates/fmradio/src/rds/: constants.rs  dsp.rs  mod.rs  parser.rs  tests.rs
crates/fmradio/tests/: rds_decoding.rs
crates/rs-hack/: Cargo.toml  readme.md
crates/rs-hack/examples/: hackrf_info.rs  hackrf_rx.rs  hackrf_tune.rs
crates/rs-hack/src/: error.rs  lib.rs  transport.rs
crates/rs-hackrf/: Cargo.toml  readme.md
crates/rs-hackrf/examples/: hackrf_info.rs  hackrf_rx.rs  hackrf_tune.rs
crates/rs-hackrf/src/: error.rs  lib.rs  transport.rs
crates/rs-rtl/: Cargo.toml  readme.md
crates/rs-rtl/examples/: rtl_stream.rs  rtl_test.rs
crates/rs-rtl/src/: device.rs  error.rs  lib.rs  rtlsdr.rs  tuner.rs
crates/rs-spy/: Cargo.toml  readme.md
crates/rs-spy/examples/: airspy_info.rs  airspy_rx.rs  airspy_tune.rs
crates/rs-spy/src/: error.rs  iqconverter.rs  lib.rs  transport.rs
crates/voracious/: .gitignore  Cargo.toml  readme.md
crates/voracious/examples/: extract_audio.rs  extract_ils.rs
crates/voracious/src/: audio.rs  device_uri.rs  dsp.rs  dsp_utils.rs  error.rs  filter_config.rs  lib.rs  main.rs  metrics.rs  source.rs  timestamp_helpers.rs
crates/voracious/src/decode/: mod.rs
crates/voracious/src/decoders/: ils.rs  ils_loc.rs  metrics.rs  mod.rs  morse.rs  vor.rs
crates/voracious/src/dsp/: filter.rs  iir.rs  mod.rs  vor.rs
crates/voracious/src/sources/: common.rs  iq.rs  mod.rs
crates/voracious/src/sources/iq/: ils.rs  ils_loc.rs  mod.rs  vor.rs
crates/voracious/src/sources/wav/: ils.rs  ils_loc.rs  mod.rs  vor.rs
crates/voracious/tests/: ils_decoding.rs  vor_decoding.rs
crates/voracious/tests/data/: gqrx_20250925_144051_114647000_1800000_fc_audio.f32  gqrx_20250925_144051_114647000_1800000_fc_meta.json  gqrx_20250925_144051_114647000_1800000_fc_ref30.f32  gqrx_20250925_144051_114647000_1800000_fc_var30.f32  gqrx_20251107_182558_116000000_1800000_fc_meta.json  gqrx_20251107_215806_110700000_1800000_fc_ils_envelope.f32
examples/: file_async.rs  file_iter.rs  file_stream.rs  file_sync.rs  rtlsdr_fm.rs  rtlsdr_stereo.rs  waterfall.rs
src/: iqread.rs  lib.rs  pluto.rs  rtlsdr.rs  soapy.rs
src/dsp/: afc.rs  decimator.rs  filters.rs  fm.rs  mod.rs  rds.rs  rds_tests.rs  resampler.rs  rotate.rs
tests/: iq_conversion_test.rs  iqread_test.rs
