[package]
name = "desperado"
version = "0.1.1"
edition = "2024"
authors = ["Xavier Olive <git@xoolive.org>"]
license = "MIT"
description = "Iterate and stream I/Q samples from stdin, files, TCP streams and SDR devices"
repository = "https://github.com/xoolive/desperado"
keywords = ["radio", "decoder"]

[dependencies]
dirs = "6.0.0"
futures = "0.3.31"
num-complex = "0.4.6"
rtl-sdr-rs = { version = "0.2", optional = true }
tokio = { version = "1.48.0", features = ["full"] }
# For examples
clap = { version = "4.5.53", features = ["color", "derive", "wrap_help", "env"], optional = true }
# For waterfall example
plotters = { version = "0.3.7", optional = true }
rustfft = { version = "6.4.1", optional = true }
# For FM demodulation example
tinyaudio = { version = "1.1.0", optional = true }
crossbeam = { version = "0.8.4", optional = true }
rubato = { version = "0.16.2", optional = true }
soapysdr = { version = "0.4.4", optional = true }

[features]
default = []
rtlsdr = ["dep:rtl-sdr-rs"]
soapy = ["dep:soapysdr"]
clap = ["dep:clap"]
waterfall = ["dep:plotters", "dep:rustfft", "clap"]
audio = ["dep:tinyaudio", "dep:crossbeam", "dep:rubato", "rtlsdr", "soapy", "clap"]

[[example]]
name = "waterfall"
path = "examples/waterfall.rs"
required-features = ["waterfall"]

[[example]]
name = "file_iter"
path = "examples/file_iter.rs"
required-features = ["clap"]

[[example]]
name = "file_stream"
path = "examples/file_stream.rs"
required-features = ["clap"]

[[example]]
name = "rtlsdr_fm"
path = "examples/rtlsdr_fm.rs"
required-features = ["audio"]

[[example]]
name = "rtlsdr_stereo"
path = "examples/rtlsdr_stereo.rs"
required-features = ["audio"]
