[package]
name = "desperado"
version = "0.1.1"
edition = "2024"
authors = ["Xavier Olive <git@xoolive.org>"]
license = "MIT"
description = "Iterate and stream I/Q samples from stdin, files, TCP streams and SDR devices"
repository = "https://github.com/xoolive/desperado"
documentation = "https://docs.rs/desperado"
readme = "readme.md"
keywords = ["radio", "decoder", "sdr", "dsp"]

[dependencies]
dirs = "6.0.0"
futures = "0.3.31"
num-complex = "0.4.6"
tokio = { version = "1.48.0", features = ["full"] }
# Various SDR support
industrial-io = { version = "0.5.2", optional = true } # together with pluto-sdr
pluto-sdr = { version = "0.1.1", optional = true }
rtl-sdr-rs = { version = "0.2", optional = true }
soapysdr = { version = "0.4.4", optional = true }
# For examples
clap = { version = "4.5.53", features = ["color", "derive", "wrap_help", "env"], optional = true }
# For waterfall example
plotters = { version = "0.3.7", optional = true }
rustfft = { version = "6.4.1", optional = true }
# For FM demodulation example
tinyaudio = { version = "2.0.0", optional = true }
crossbeam = { version = "0.8.4", optional = true }
rubato = { version = "0.16.2", optional = true }

[dev-dependencies]
approx = "0.5.1"

[features]
default = []
pluto = ["dep:pluto-sdr", "dep:industrial-io"]
rtlsdr = ["dep:rtl-sdr-rs"]
soapy = ["dep:soapysdr"]
clap = ["dep:clap"]
adaptive = ["dep:rubato"]
waterfall = ["dep:plotters", "dep:rustfft", "clap"]
audio = ["adaptive", "dep:tinyaudio", "dep:crossbeam", "rtlsdr", "soapy", "clap"]

[[example]]
name = "waterfall"
path = "examples/waterfall.rs"
required-features = ["waterfall"]

[[example]]
name = "file_iter"
path = "examples/file_iter.rs"
required-features = ["clap"]

[[example]]
name = "file_stream"
path = "examples/file_stream.rs"
required-features = ["clap"]

[[example]]
name = "rtlsdr_fm"
path = "examples/rtlsdr_fm.rs"
required-features = ["audio"]
