[workspace]
members = ["crates/desperado", "crates/fmradio", "crates/rs-spy"]
resolver = "3"

[workspace.package]
version = "0.2.1"
edition = "2024"
authors = ["Xavier Olive <git@xoolive.org>"]
license = "MIT"
homepage = "https://github.com/xoolive/desperado"
repository = "https://github.com/xoolive/desperado"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[profile.release]
lto = true
strip = true
overflow-checks = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
