[package]
name = "dabradio"
description = "A DAB/DAB+ digital radio decoder"
keywords = ["sdr", "radio", "dab", "ofdm", "digital-radio"]
readme = "readme.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "dabradio"
path = "src/main.rs"

[dependencies]
# Device support via desperado
desperado = { version = "0.4.1", path = "../desperado", features = ["rtlsdr", "airspy", "hackrf", "resampler"] }
num-complex = "0.4"
rustfft = "6"
clap = { version = "4.6", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fdk-aac = "0.8"
reed-solomon = "0.2"
tinyaudio = "0.1"
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
viuer = { version = "0.11.0", default-features = false, features = ["print-file"] }
ratatui = "0.29"
crossterm = "0.28"

[features]
soapy = ["desperado/soapy"]
