[package]
name = "desperado"
description = "Iterate and stream I/Q samples from stdin, files, TCP streams and SDR devices"
documentation = "https://docs.rs/desperado"
readme = "readme.md"
keywords = ["radio", "decoder", "sdr", "dsp"]
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
dirs = "6.0.0"
futures = "0.3.31"
num-complex = "0.4.6"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
# Various SDR support
industrial-io = { version = "0.5.2", optional = true } # together with pluto-sdr
pluto-sdr = { version = "0.1.1", optional = true }
rtl-sdr-rs = { version = "0.3", optional = true }
rs-spy = { version = "0.3.0", path = "../rs-spy", optional = true }
rusb = { version = "0.9", optional = true }
soapysdr = { version = "0.4.5", optional = true }
# For examples
clap = { version = "4.5.56", features = ["color", "derive", "wrap_help", "env"], optional = true }
# For waterfall example
plotters = { version = "0.3.7", optional = true }
rustfft = { version = "6.4.1", optional = true }

[dev-dependencies]
approx = "0.5.1"

[features]
default = []
airspy = ["dep:rs-spy"]
pluto = ["dep:pluto-sdr", "dep:industrial-io"]
rtlsdr = ["dep:rtl-sdr-rs", "dep:rusb"]
soapy = ["dep:soapysdr"]
clap = ["dep:clap"]
waterfall = ["dep:plotters", "dep:rustfft", "clap"]

[[example]]
name = "waterfall"
path = "examples/waterfall.rs"
required-features = ["waterfall"]

[[example]]
name = "file_iter"
path = "examples/file_iter.rs"
required-features = ["clap"]

[[example]]
name = "file_stream"
path = "examples/file_stream.rs"
required-features = ["clap"]

[[example]]
name = "airspy_test"
path = "examples/airspy_test.rs"
required-features = ["airspy"]
