[package]
name = "desperado"
description = "Iterate and stream I/Q samples from stdin, files, TCP streams and SDR devices"
documentation = "https://docs.rs/desperado"
readme = "readme.md"
keywords = ["radio", "decoder", "sdr", "dsp"]
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
biquad = "0.5.0"
dirs = "6.0.0"
futures = "0.3.32"
num-complex = "0.4.6"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
# Various SDR support
industrial-io = { version = "0.5.2", optional = true } # together with pluto-sdr
pluto-sdr = { version = "0.1.1", optional = true }
rs-hackrf = { version = "0.4.1", path = "../rs-hackrf", optional = true }
rs-rtl = { version = "0.4.1", path = "../rs-rtl", optional = true }
rs-spy = { version = "0.4.1", path = "../rs-spy", optional = true }
rusb = { version = "0.9", optional = true }
soapysdr = { version = "0.4.5", optional = true }
# For examples
clap = { version = "4.5.60", features = ["color", "derive", "wrap_help", "env"], optional = true }
# For waterfall example
plotters = { version = "0.3.7", optional = true }
rustfft = { version = "6.4.1", optional = true }

[dev-dependencies]
approx = "0.5.1"
tempfile = "3"

[features]
default = []
airspy = ["dep:rs-spy"]
hackrf = ["dep:rs-hackrf"]
pluto = ["dep:pluto-sdr", "dep:industrial-io"]
rtlsdr = ["dep:rs-rtl"]
soapy = ["dep:soapysdr"]
resampler = []
clap = ["dep:clap"]
waterfall = ["dep:plotters", "dep:rustfft", "clap"]

[[example]]
name = "waterfall"
path = "examples/waterfall.rs"
required-features = ["waterfall"]

[[example]]
name = "file_iter"
path = "examples/file_iter.rs"
required-features = ["clap"]

[[example]]
name = "file_stream"
path = "examples/file_stream.rs"
required-features = ["clap"]

[[example]]
name = "airspy_raw_bytes"
path = "examples/airspy_raw_bytes.rs"
required-features = ["airspy"]

[[example]]
name = "airspy_test"
path = "examples/airspy_test.rs"
required-features = ["airspy"]

[[example]]
name = "rtl_sdr"
path = "examples/rtl_sdr.rs"
required-features = ["rtlsdr", "clap"]
