[package]
name = "fmradio"
description = "An FM radio demodulator and RDS decoder in pure Rust"
keywords = ["sdr", "radio", "fm", "stereo", "rds"]
readme = "readme.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude = ["tests/data/"]

[[bin]]
name = "fmradio"
path = "src/main.rs"

[lib]
name = "fmradio"
path = "src/lib.rs"

[dependencies]
num-complex = "0.4"
rubato = "0.16.2"
crossbeam-channel = "0.5"
tinyaudio = "0.1"
tracing = "0.1"
approx = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Device support via desperado
desperado = { version = "0.4.1", path = "../desperado", features = ["rtlsdr", "airspy", "hackrf"] }
clap = { version = "4.6", features = ["derive"] }
tracing-subscriber = "0.3"
tokio = { version = "1.52", features = ["full"] }
futures = "0.3"
crossbeam = "0.8"
rayon = "1.12"
ratatui = "0.30"
crossterm = "0.28"

[features]
soapy = ["desperado/soapy"]
test-fixtures = []
