[package]
name = "rs-spy"
description = "A pure Rust library for Airspy SDR devices"
keywords = ["airspy", "sdr", "radio"]
readme = "readme.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
num-complex = "0.4"
rusb = "0.9"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
