[package]
name = "voracious"
description = "VOR signal decoder for aviation navigation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "readme.md"
keywords = ["vor", "aviation", "radio", "decoder", "navigation"]

[dependencies]
num-complex = "0.4"
rustfft = "6.4"
desperado = { path = "../desperado", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rtl-sdr-rs = { version = "0.2", optional = true }
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }
biquad = "0.5.0"
chrono = "0.4"

[features]
default = ["rtlsdr", "airspy"]
rtlsdr = ["dep:rtl-sdr-rs", "desperado/rtlsdr"]
soapy = ["desperado/soapy"]
airspy = ["desperado/airspy"]

[[bin]]
name = "voracious"
path = "src/main.rs"

[lib]
name = "voracious"
path = "src/lib.rs"
