[package]
name = "voracious"
description = "VOR signal decoder for aviation navigation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "readme.md"
keywords = ["vor", "aviation", "radio", "decoder", "navigation"]

[dependencies]
num-complex = "0.4"
rustfft = "6.4"
# Device support via desperado
desperado = { version = "0.4.0", path = "../desperado", features = ["rtlsdr", "airspy", "hackrf"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
biquad = "0.5.0"
chrono = "0.4"
tinyaudio = "0.1"
crossbeam-channel = "0.5"
hound = "3.5"

[features]
soapy = ["desperado/soapy"]

[[bin]]
name = "voracious"
path = "src/main.rs"

[lib]
name = "voracious"
path = "src/lib.rs"
